--- a/OnePiece/css/styles.css
+++ b/OnePiece/css/styles.css
@@ -139,6 +139,7 @@ body.dark-mode details[open] > summary {
     display: none;
     padding: 20px;
     padding-bottom: 60px;
+    margin-bottom: -60px;
     min-height: 100vh;
 }
 
