--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
     
     h2 {
         font-size: 18px;
+        margin-top: 8px;
         color: #554242;
     }
         
@@ -109,9 +110,9 @@
 
     #current-filter {
         background-color: #f8f9fa;
-        padding: 8px 12px;
+        padding: 4px 12px;
         border-radius: 4px;
-        margin-bottom: 15px;
+        margin-bottom: 8px;
         font-weight: bold;
         border-left: 4px solid #007bff;
     }
@@ -360,11 +361,11 @@
      * ************************************/
     
     #current-filter::before {
-        content: "Current Catagory: ";
+        content: "Current Category: ";
     }
     
     #current-filter {
-        margin-bottom: 10px;
+        margin: 8px 0px;
         font-style: italic;
     }
     
@@ -682,4 +683,5 @@
         background: none;
         border: 1px solid #000;
     }
+
 }
